--- a/aboly.html
+++ b/aboly.html
@@ -1179,10 +1179,10 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="er2a"></a><span class="lyterm">而</span>：用于主谓语之间表示假设，如果，要是。<span class="lyexample"><span>【例】</span><span><a href="#3.3" class="lyref">3.3</a> <span class="lyq">人而不仁，如礼何？</span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管氏而知礼，孰不知礼？</span><a href="#7.12" class="lyref">7.12</a> <span class="lyq">富而可求也，虽执鞭之士，吾亦为之。</span></span></span></p></li>
 <li>
-<p><span class="lyterm">輗</span>（<span class="lypinyin">ní</span>）：古代用牛拉的大车上，连接车轴横木与牛牵引的两根车辕木的活动销子。</p>
-<p><span class="lyterm">軏</span>（<span class="lypinyin">yuè</span>）：古代用马拉的小车上，对应于“輗”的活动销子。</p>
+<p><span class="lyterm">輗</span>（<span class="lypinyin">ní</span>）：古代用牛拉的大车上，把牛牵引的两根车辕木与车轴横木连接起来的活动销子，是传导拉力至车身的关键。</p>
+<p><span class="lyterm">軏</span>（<span class="lypinyin">yuè</span>）：古代用马拉的小车上，对应于“輗”的部件。<span class="lyseealso"><span>【参】</span><span>《说文解字》清代段玉裁注引戴震语：<span class="lyq">辕所以引车，必施輗軏而后行。信之在人，亦交接相持之关键。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">行</span>一语双关：对车，指行驶；对人，指立身行事。</p></li>
+<li><p><span class="lyterm">行</span>一语双关：对车，指行驶；对人，指立身行事。<span class="lyseealso"><span>【参】</span><span><a href="#15.6" class="lyref">15.6</a> <span class="lyq">言忠信，行笃敬，虽蛮貊之邦，行矣。</span>这里前一个“行”是名词，行为，品行；后一个“行”是动词，（可以在那里）通行无碍，行得通，与本章的含义近似，其反义则是“举步维艰”。</span></span></p></li>
 </ul></div>
 </div>
 <a id="2.23"></a><div class="lyblob">
@@ -2296,7 +2296,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="wucheng"></a><span class="lyterm">武城</span>：又称南武城，位于鲁国南部，在今山东省临沂市平邑县。</p></li>
 <li><p><span class="lyterm">得人</span>：指访求到有才德的人作为辅助。<span class="lyseealso"><span>【参】</span><span><a href="#13.2" class="lyref">13.2</a> </span></span></p></li>
-<li><p><a id="jing4"></a><span class="lyterm">径</span>：本义为宽度仅容一人行走的小路，引申指取巧、不正当的门路。成语“行不由径”指为人做事光明磊落，不往邪路上靠。</p></li>
+<li><p><a id="jing4"></a><span class="lyterm">径</span>：本义为宽度仅容一人行走的小路，引申指取巧、不正当的门路。<span class="lyexample"><span>【例】</span><span>《老子》第53章：<span class="lyq">大道甚<a href="#yi2">夷</a>，而民<a href="#hao4">好</a>径。</span></span></span>成语“行不由径”指为人做事光明磊落，不往邪路上靠。</p></li>
 <li><p><a id="shi4e"></a><span class="lyterm">室</span>：房屋内<a href="#tang2">厅堂</a>之后的部分，相当于现代口语的“里间屋”。所以既表示关系亲密，也可以有隐秘鬼祟的意味。</p></li>
 </ul></div>
 </div>
@@ -2569,7 +2569,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">悱</span>（<span class="lypinyin">fěi</span>）：（心里是明白了，）语言上组织不顺、表达不好而有怨。</p>
-<p><a id="fa1"></a><span class="lyterm">发</span>：本义为把箭射出去，这里指引导说出来。营造愤悱气氛，激励学生积极思考，是孔子颇具特色的教学方法。<span class="lyseealso"><span>【参】</span><span><a href="#9.11" class="lyref">9.11</a> </span></span></p>
+<p><a id="fa1"></a><span class="lyterm">发</span>：本义为把箭射出去，这里指引导说出来。营造愤悱气氛，激励学生积极思考，是孔子颇具特色的教学方法。<span class="lyseealso"><span>【参】</span><span><a href="#9.11" class="lyref">9.11</a> <span class="lyq">夫子循循然善诱人，博我以文，约我以礼，欲罢不能。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">隅</span>（<span class="lypinyin">yú</span>）：角，角落。<span class="lyterm">反</span>：回，还，这里指回报，响应。成语“举一反三”指从一件事情推知相似或相关的其它许多事情，触类旁通。</p></li>
 <li><p><span class="lyterm">复</span>：再次，指继续传授新知识。</p></li>
@@ -3219,7 +3219,7 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#mian3">冕</a>衣裳（<span class="lypinyin">cháng</span>）者</span>：衣帽端整的（官）人。古代称上衣为<span class="lyterm">衣</span>，下衣为<span class="lyterm">裳</span>。</p></li>
 <li><p><a id="gu3a"></a><span class="lyterm"><a href="#gu3b">瞽</a>（<span class="lypinyin">gǔ</span>）者</span>：泛指盲人。</p></li>
 <li><p><a id="suishaobizuo"></a><span class="lyterm">虽少必作</span>：即使（他们）年纪轻，（孔子）也一定站起身来。</p></li>
-<li><p><span class="lyterm">过之必趋</span>：经过他们面前时，也一定紧走几步。<span class="lyterm">趋</span>：本义为快走，奔跑，这里指低头弯腰、小步快走的礼节，以示尊重。<span class="lyexample"><span>【例】</span><span><a href="#16.13" class="lyref">16.13</a> <span class="lyq">尝独立，鲤趋而过庭。</span>从西汉开国丞相萧何起，王公重臣有时会被皇帝赐予“入朝不趋，赞拜不名，剑履上殿”之权，就是上朝时不用快步走，登殿时不必摘佩剑脱鞋子，拜君时朝仪官尊称其官职而不直呼其名。这是殊礼，表示无比的信任倚重，经常也说明他已经权倾朝野了。</span></span></p></li>
+<li><p><span class="lyterm">过之必趋</span>：经过他们面前时，也一定紧走几步。<span class="lyterm">趋</span>：本义为快走，奔跑，这里指低头弯腰、小步快走的礼节，以示尊重。<span class="lyexample"><span>【例】</span><span><a href="#16.13" class="lyref">16.13</a> <span class="lyq">尝独立，鲤趋而过庭。</span>从西汉开国丞相萧何起，王公重臣有时会被赐予“入朝不趋，赞拜不名，剑履上殿”之权（上朝时不用快步走，登殿时不必摘佩剑脱鞋子，拜君时朝仪官尊称其官职而不直呼姓名）。这种殊礼表示无比的信任倚重，经常也说明他已经权倾朝野了。</span></span></p></li>
 </ul></div>
 </div>
 <a id="9.11"></a><div class="lyblob">
@@ -3227,7 +3227,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#yanhui">颜渊</a>喟然叹曰：“仰之弥高，钻之弥坚；瞻之在前，忽焉在后。夫子循循然善诱人，博我以文，约我以礼，欲罢不能。既竭吾才，如有所立卓尔，虽欲从之，末由也已。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><a id="kui4"></a><span class="lyterm">喟</span>（<span class="lypinyin">kuì</span>）：叹气，叹息。“喟然而叹”在现代汉语中也很常见。</p></li>
+<li><p><a id="kui4"></a><span class="lyterm">喟</span>（<span class="lypinyin">kuì</span>）：叹气，叹息。“喟然长叹”在现代汉语中也很常见。<span class="lyseealso"><span>【参】</span><span>《古汉语常用字字典》的附录《古代汉语语法简介》说，<span class="lyq">有的形容词加“然”（或“如”、“若”等），表示的就是后面那个动作的状态</span>，举的两个例子就是“喟然长叹”和 <a href="#17.4" class="lyref">17.4</a> <span class="lyq">莞尔而笑</span>。</span></span></p></li>
 <li><p><a id="mi2"></a><span class="lyterm">弥</span>：越，更。<span class="lyexample"><span>【例】</span><span>宋玉《对楚王问》：<span class="lyq">是其曲弥高，其<a href="#he4">和</a>弥寡。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#9.19" class="lyref">9.19</a> <span class="lyq">进，吾往也。</span></span></span></p></li>
 <li><p><span class="lyterm">瞻</span>：向上或向前看。<span class="lyexample"><span>【例】</span><span>成语“瞻前顾后”。</span></span></p></li>
 <li>
@@ -4036,21 +4036,21 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。<span class="lyterm">以</span>：“以为念”的略语，即顾虑。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙比子路年纪小，比冉有年纪大。</p>
-<p>后来有成语“一日之长”，用来谦虚地说自己比别人年纪稍大一点。“一日之长”（<span class="lypinyin">cháng</span>）则是另一个成语，用来谦虚地说自己的才能稍强一点。</p>
+<p><span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。<span class="lyterm">以</span>：相当于说“以为念”，即顾虑。具体的原因在前面讲了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙比子路年轻，比冉有年长。</p>
+<p>后来有成语“一日之长”，用来谦虚地说自己比别人年纪稍大一点。“一日之长”（<span class="lypinyin">cháng</span>）则是另一个成语，用来谦虚地说自己的才能略强一点。</p>
 </li>
 <li><p><span class="lyterm">居则曰‘不吾知也’</span>：（你们）平时动不动就说“没人赏识我啊”。<a id="ju1"></a><span class="lyterm"><a href="#ju1a">居</a></span>：指平日里，闲暇时。如果要对应到它的动词属性，可以说“一有空”。<span class="lyterm">则</span>：表示动作的承接关系。</p></li>
 <li><p><span class="lyterm"><a href="#heyi">何以</a></span>：怎样，指做什么，如何表现。</p></li>
 <li><p><span class="lyterm">率</span>：可理解为直率、不假思索，也可理解为率先、抢着，都符合子路的性格。<span class="lyterm">率尔</span>就好像现代口语“着急忙慌”的感觉。这几位弟子中子路最年长，先回答也是应该的。</p></li>
-<li><p><span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义“持”理解，也可以借助“镊”理解。</p></li>
+<li><p><span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义“持”理解，也可以借助“镊”的形象。</p></li>
 <li><p><span class="lyterm">师旅</span>：泛指军队，武力。<a href="#sanjun">周制</a> 500人为<span class="lyterm">旅</span>，2500人为<span class="lyterm">师</span>。</p></li>
-<li><p><span class="lyterm">因</span>：继，接续，增加。可以比较它在 <a href="#2.23" class="lyref">2.23</a>  的含义。</p></li>
+<li><p><span class="lyterm">因</span>：继，接续，增加。可以比较它在 <a href="#2.23" class="lyref">2.23</a> <span class="lyq">殷因于夏礼</span>的含义。</p></li>
 <li><p><span class="lyterm">饥馑</span>（<span class="lypinyin">jǐn</span>）：荒年，灾荒。<span class="lyterm">饥</span>：谷物歉收。<span class="lyterm">馑</span>：蔬菜歉收。这说的是国家面临重重危难，子路自信正是他的用武之地。</p></li>
 <li><p><span class="lyterm">为之</span>指治理国家，偏重的内容要根据各人的上下文理解。子路的理想，应该包括 <a href="#5.8" class="lyref">5.8</a>  的<span class="lyq">治其赋</span>和教以礼义，也就是 <a href="#13.29" class="lyref">13.29</a> 、<a href="#13.30" class="lyref">13.30</a>  的“教民”。</p></li>
 <li><p><span class="lyterm"><a href="#bi3">比</a>及</span>：到了，等到。</p></li>
-<li><p><span class="lyterm">方</span>：道理，道义。<span class="lyexample"><span>【例】</span><span>成语“贻笑大方”。（贻：留给。大方：造诣高深者，行家。）</span></span></p></li>
+<li><p><span class="lyterm">方</span>：道理，道义。<span class="lyexample"><span>【例】</span><span>成语“贻笑大方”。（<a id="yi2b"></a>贻（<span class="lypinyin">yí</span>）：留给，留下。大方：造诣高深者，行家。）</span></span></p></li>
 <li><p><span class="lyterm">哂</span>（<span class="lypinyin">shěn</span>）：微笑，《说文解字》解释为<span class="lyq">笑不坏颜</span>，常指隐约的讥笑。</p></li>
-<li><p><span class="lyterm">方六七十，如五六十</span>：指不起眼的<a href="#qianli">小国</a>。<a id="fang1a"></a><span class="lyterm">方</span>：纵横的长度，这里的单位是<a href="#li3b">里</a>。<span class="lyterm">如</span>：表示选择的连词，或。<span class="lyexample"><span>【例】</span><span>《史记·平原君虞卿列传》：<span class="lyq">予秦地如毋予，孰吉？</span></span></span></p></li>
+<li><p><span class="lyterm">方六七十，如五六十</span>：指不起眼的<a href="#qianli">小国</a>。<a id="fang1a"></a><span class="lyterm">方</span>：纵横的长度，这里的单位是<a href="#li3b">里</a>。<span class="lyterm">如</span>：表示选择的连词，或。它的这个含义，应是从动词意义的同、像（例：犹如），衍生至比得上（例：不如），又逐渐虚化为连词，连接可以相提并论的选项。<span class="lyexample"><span>【例】</span><span>《史记·平原君虞卿列传》：<span class="lyq">予秦地如毋予，孰吉？</span></span></span></p></li>
 <li><p><span class="lyterm">以<a href="#si4a">俟</a>君子</span>：这是谦虚地表示自己能力不够，尚待其他贤人来实现。</p></li>
 <li>
 <p><span class="lyterm"><a href="#zongmiao">宗庙</a>之事，如会同，端章甫</span>：祭祀宗庙的时候，或者各国国君会盟的时候，穿得衣冠整齐。</p>
@@ -4069,7 +4069,7 @@ img.characterimg {
 <li><p><span class="lyterm">浴乎沂（<span class="lypinyin">yí</span>），风乎舞雩（<span class="lypinyin">yú</span>）</span>：在沂水里洗澡，再到雩台前乘风纳凉。<span class="lyterm">沂</span>：河名，发源于今山东省邹城市。<span class="lyterm">雩</span>：古代以乐舞祭神求雨的仪式。<span class="lyterm">舞雩</span>指当时沂河北岸的一个雩祭场所，有祭台和树木，在今山东省曲阜市。加<span class="lyterm">舞</span>突出了雩祭的特征，当然读起来也更能感受那种顺心恣意的心情。</p></li>
 <li><p><a id="yong3"></a><span class="lyterm">咏</span>：长声吟唱。不妨遥想一下，他们所咏的内容会是什么？<span class="lyseealso"><span>【参】</span><span><a href="#6.30" class="lyref">6.30</a> </span></span></p></li>
 <li><p><a id="an1"></a><span class="lyterm">安</span>：表示反问的代词，怎么，岂，参见<a href="#yan1">焉</a>。练习：快递公司使用“所托安至”作宣传语，是否妥当？</p></li>
-<li><p><span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。孔子问的是“如或知尔”，诸弟子从子路往后，一个比一个回答得谦逊含蓄，所以曾皙想请老师点拨开导一下。</p></li>
+<li><p><span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。孔子问的是“如或知尔”，诸弟子从子路往后，一个比一个回答得谦逊含蓄，所以曾皙想请老师点拨一下。</p></li>
 </ul></div>
 </div>
 <a id="12"></a><h1 class="lybodychapter">12. 颜渊</h1>
@@ -4368,10 +4368,10 @@ img.characterimg {
 <p>子曰：“野哉，<a href="#zilu">由</a>也！君子于其所不知，盖阙如也。名不正，则言不顺；言不顺，则事不成；事不成，则礼乐不兴；礼乐不兴，则刑罚不中；刑罚不中，则民无所错手足。故君子名之必可言也，言之必可行也。君子于其言，无所苟而已矣。”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">卫君待子而为政</span>：如果卫君请您去治国理政的话。<span class="lyterm">而</span>是普通连词，这句话的假设、条件意味，由后面的问句<span class="lyterm">子将<a href="#xi1">奚</a>先</span>提供，相当于给开头补上了“若”，语气较为舒缓。<a href="#2.22" class="lyref">2.22</a>  用在主谓语之间的<a href="#er2a">而</a>，假设语气更直接和强烈。</p></li>
+<li><p><span class="lyterm">卫君待子而为政</span>：卫君请您去治国理政的话。这里的<span class="lyterm">而</span>是普通连词，句中假设、条件的意味，由随后的问句<span class="lyterm">子将<a href="#xi1">奚</a>先</span>提供，相当于给开头找补了“若”，语气较为舒缓。<a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信</span>的<a href="#er2a">而</a>用在主谓语之间，假设语气更直接强烈。<span class="lyterm">待</span>是邀请的含蓄说法，带有虚席热望的意象。</p></li>
 <li>
-<p><a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，古注多解作<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
-<p>汉代尊儒，教化中强调名分地位的意义，“以名为教”，<a href="#14.26">不出其位</a>，用以维护等级秩序。魏晋起，称儒家礼教为<span class="lykeyword">名教</span>，按陈寅恪先生《金明馆丛稿初编·陶渊明之思想与清谈之关系》的解释，<span class="lyq">以名为教，即以官长君臣之义为教，亦即入世求仕者所宜奉行者也。其主张与崇尚自然即避世不仕者适相违反。</span><a id="jiancuanweijiao"></a>超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cuàn</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
+<p><a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，古注多解为<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
+<p>汉代尊儒，教化中强调名分地位的意义，“以名为教”，<a href="#14.26">不出其位</a>，用以维护等级秩序。魏晋起，儒家礼教被称为<span class="lykeyword">名教</span>，按陈寅恪先生《金明馆丛稿初编·陶渊明之思想与清谈之关系》的解释，<span class="lyq">以名为教，即以官长君臣之义为教，亦即入世求仕者所宜奉行者也。其主张与崇尚自然即避世不仕者适相违反。</span>举例来说，<a id="jiancuanweijiao"></a>超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cuàn</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span>《韩非子·扬权》：<span class="lyq">用一之道，以名为首。名正物定，名倚物徙。</span>《日知录·卷十三·名教》：<span class="lyq">《南史》有云：“汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。”故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。……故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。……人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通“污”。扇（<span class="lypinyin">shān</span>）：兴。）</span></p>
 <p>《孔子家语》首篇《相鲁》开头，记述了孔子<a href="#qirenkuinvyue">初登政坛</a>的举措：<span class="lyq">孔子初仕，为中都宰。制为养生送死之节，长幼异食，强弱异任，男女别<a href="#tu2">涂</a>，路无拾遗，器不雕伪。为四寸之棺，五寸之<a href="#guo3">椁</a>，因丘陵为坟，不封不树。行之一年，而四方之诸侯<a href="#ze2">则</a>焉。</span>（不封不树：不积土起坟，不植树为念，指丧礼从简。）</p>
@@ -4548,7 +4548,7 @@ img.characterimg {
 <p>这里“有耻”修饰“行己”。在现代语境中，还可以把“行己有耻”理解为并列结构，行己就是做（真的）自己，be your (best) self，也很有意义。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span>顾炎武《与友人论学书》中，高度推崇“博学”、“有耻”：<span class="lyq">愚所谓圣人之道者如之何？曰“<a href="#6.27">博学于文</a>”，曰“行己有耻”。自一身以至于天下国家，皆学之事也；自子臣弟友以至出入、往来、辞受、取与之间，皆有耻之事也。耻之于人大矣！不<a href="#4.9">耻恶衣恶食</a>，而<a href="#yitianxiaweijiren">耻匹夫匹妇之不被其泽</a>。</span></span></p>
-<p>使于四方不辱君命，是外交使节的荣誉所在。西汉的苏武被匈奴羁留19年，执节牧羊，坚贞不屈，<span class="lyq">始以强壮出，及还，须发尽白</span>，赢得一致的尊重。（《汉书·苏武传》。）1793年代表英国首次使华的乔治·马戛尔尼（George Macartney）也在其日记中写道：<span class="lyq">吾禀命东来，与本国政府相距既远，事事均须斟酌独断，万一处理不当，必贻国际之羞。</span>（《乾隆英使觐见记》，刘半农译。）后来有熟语“不辱使命”。</p>
+<p>使于四方不辱君命，是外交使节的荣誉所在。西汉的苏武被匈奴羁留19年，执节牧羊，坚贞不屈，<span class="lyq">始以强壮出，及还，须发尽白</span>，赢得一致的尊重。（《汉书·苏武传》。）1793年代表英国首次使华的乔治·马戛尔尼（George Macartney）也在其日记中写道：<span class="lyq">吾禀命东来，与本国政府相距既远，事事均须斟酌独断，万一处理不当，必<a href="#yi2b">贻</a>国际之羞。</span>（《乾隆英使觐见记》，刘半农译。）后来有熟语“不辱使命”。</p>
 <p>有耻属于修身，使不辱命属于事功，这是孔子心中“士”的两面，也是儒家<a href="#xian2">贤人</a>的两面。而根据 <a href="#13.5" class="lyref">13.5</a> ，博学于文也应当学以致用。所以明代吕坤的《呻吟语·问学》主张：<span class="lyq">道理书尽读，事务书多读，文章书少读，闲杂书休读，邪妄书焚之可也。</span>（文章书：指偏于文学技巧的诗词歌赋作品。）共通的观点在不同时代有特定的表述，例如1958年建校的中国科学技术大学，校训就是“红专并进，理实交融”。</p>
 </div>
 </li>
@@ -4603,7 +4603,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#13.26">13.26</a></div>
 <div class="lybloboriginaltext"><p>子曰：“君子泰而不骄，小人骄而不泰。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><a id="tai4a"></a><span class="lyterm">泰</span>：自如舒适。《说文解字》：<span class="lyq">泰，滑也。</span>清代段玉裁注：<span class="lyq">字从水。水在手中，下溜甚利也。……滑则宽裕自如。</span><span class="lyexample"><span>【例】</span><span>成语“泰然自若”。</span></span></p>
+<p><a id="tai4a"></a><span class="lyterm">泰</span>：自如舒适。《说文解字》：<span class="lyq">泰，滑也。</span>段玉裁注：<span class="lyq">字从水。水在手中，下溜甚利也。……滑则宽裕自如。</span><span class="lyexample"><span>【例】</span><span>成语“泰然自若”。</span></span></p>
 <p><a href="#20.2" class="lyref">20.2</a>  有孔子本人的<a href="#wuzhonggua">解释</a>：<span class="lyq">君子无众寡，无小大，无敢慢，斯不亦泰而不骄乎？</span><span class="lyseealso"><span>【参】</span><span>北宋周敦颐《通书》：<span class="lyq">君子以道充为贵，身安为富，故常泰无不足。</span></span></span></p>
 </li></ul></div>
 </div>
@@ -4946,17 +4946,19 @@ img.characterimg {
 <p>子曰：“不在其位，不谋其政。”</p>
 <p><a href="#zengshen">曾子</a>曰：“君子思不出其位。”</p>
 </div>
-<div class="lyblobannotation"><ul class="lyblobitemize">
+<div class="lyblobannotation">
+<ul class="lyblobitemize">
 <li><p><span class="lyterm">谋</span>：思考，考虑。<span class="lyterm">政</span>：指职务范围内的事。</p></li>
 <li>
 <p><span class="lyterm">思不出其位</span>：不考虑超出其职务范围的分外事。曾子的话可看作对老师的注解，就是要清楚自己的职责所在，恪尽职守，不要东张西望，<span class="lyq">徒劳无补，并滋纷乱</span>（钱穆《论语新解》）。</p>
 <p>“出位”就是做超出本分的事，现代常用来指哗众取宠的奇言异行。<span class="lyexample"><span>【例】</span><span>《明史·饶伸传》：<span class="lyq">诏诸司严约所属，毋出位沽名。</span></span></span></p>
-<div class="lyseealso">
-<p><span>【参】</span><span><a href="#8.4" class="lyref">8.4</a>  中曾子已经说过：<span class="lyq">笾豆之事，则有司存。</span>《史记·陈丞相世家》载，陈平以灭诸吕、拥立孝文帝之功不如周勃，让勃为右丞相。某日上朝，孝文帝问周勃全国每年有多少决狱（诉讼判案）、钱谷出入（赋税收支），周勃<span class="lyq"><a href="#xie4a">谢</a>不知，汗出沾背，愧不能对。于是上亦问左丞相平，平曰：“有主者。”上曰：“主者谓谁？”平曰：“陛下即问决狱，责廷尉；问钱谷，责治粟内史。”上曰：“<a href="#gou3a">苟</a>各有主者，而君所主者何事也？”平<a href="#xie4a">谢</a>曰：“主臣！陛下不知<a href="#qi2">其</a><a href="#nudun">驽下</a>，使待罪宰相。宰相者，上佐天子理阴阳、顺四时，下育万物之宜，外镇抚四夷诸侯，内亲附百姓，使卿大夫各得任其职焉。”孝文帝乃称善。右丞相大惭，出而让陈平曰：“君独素不教我对！”陈平笑曰：“君居其位，不知其任邪？且陛下即问长安中盗贼数，君欲强对邪？”于是绛侯自知其能不如平远矣。居顷之，绛侯谢病请免相，陈平专为一丞相。</span></span></p>
-<p>（<a id="zhu3a"></a>主：掌管。即：假如。责：质问。君：您，阁下，有戏谑意。待罪：任职的谦虚说法，用于陈奏帝王，意思是早晚要出岔子被治罪了。让：责备。独：却，偏偏。素：向来，平时。绛侯：即周勃。）</p>
-</div>
 </li>
-</ul></div>
+</ul>
+<div class="lyseealso">
+<p><span>【参】</span><span><a href="#8.4" class="lyref">8.4</a>  曾子也说过：<span class="lyq">笾豆之事，则有司存。</span>《史记·陈丞相世家》载，陈平以灭诸吕、拥立孝文帝之功不如周勃，让勃为右丞相。某日上朝，孝文帝问周勃全国每年有多少决狱（诉讼判案）、钱谷出入（赋税收支），周勃<span class="lyq"><a href="#xie4a">谢</a>不知，汗出沾背，愧不能对。于是上亦问左丞相平，平曰：“有主者。”上曰：“主者谓谁？”平曰：“陛下即问决狱，责廷尉；问钱谷，责治粟内史。”上曰：“<a href="#gou3a">苟</a>各有主者，而君所主者何事也？”平<a href="#xie4a">谢</a>曰：“主臣！陛下不知<a href="#qi2">其</a><a href="#nudun">驽下</a>，使待罪宰相。宰相者，上佐天子理阴阳、顺四时，下育万物之宜，外镇抚四夷诸侯，内亲附百姓，使卿大夫各得任其职焉。”孝文帝乃称善。右丞相大惭，出而让陈平曰：“君独素不教我对！”陈平笑曰：“君居其位，不知其任邪？且陛下即问长安中盗贼数，君欲强对邪？”于是绛侯自知其能不如平远矣。居顷之，绛侯谢病请免相，陈平专为一丞相。</span></span></p>
+<p>（<a id="zhu3a"></a>主：掌管。即：假如。责：质问。君：您，阁下，有戏谑意。待罪：任职的谦称，意思是早晚要出岔子被治罪了。让：责备。独：却，偏偏。素：向来，平时。绛侯：即周勃。）</p>
+</div>
+</div>
 </div>
 <a id="14.27"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.27">14.27</a></div>
@@ -5180,7 +5182,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“无为而治者，其<a href="#shun">舜</a>也与！夫何为哉？恭己正南面而已矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><a id="wuweierzhi"></a><span class="lyterm">无为而治</span>：当权者无需事事亲力亲为就实现大治，意思是明君知人善任即可指挥若定，这是儒家的观念。<span class="lyseealso"><span>【参】</span><span><a href="#2.1" class="lyref">2.1</a> 。据《史记·五帝本纪》，在<a href="#yao">尧帝</a>时代，<a href="#yu">禹</a>、<a href="#gaoyao">皋陶</a>、<a href="#shangchao">契</a>、<a href="#houji">后稷</a>等贤才虽皆举用，但未有分工。舜帝即位后，<a href="#xuanyuzhong">广征众议</a>，根据工作需要和个人特长分配给22位贤臣专职，并定期考评绩效，<span class="lyq">三岁一考功，三考绌陟</span>，<span class="lyq">此二十二人咸成厥功。</span>（绌陟（<span class="lypinyin">chù zhì</span>）：职位降升。）舜帝的功德普照华胄外族，<span class="lyq">方五千里，至于荒服。……<a href="#sihai">四海</a>之内，咸戴帝舜之功。……天下明德皆自虞帝始。</span>苏轼《上皇帝书》：<span class="lyq">智者所图，贵于无迹。汉之<a href="#wenjingzhizhi">文、景</a>，纪无可书之事；唐之房、杜，传无可载之功。而天下之言治者，<a href="#yu3a">与</a>文、景；言贤者，与房、杜。盖事已立而迹不见，功已成而人不知。</span>（房、杜：指初唐名臣房玄龄、杜如晦，他们辅助唐太宗开创了名垂后世的“贞观之治”。）</span></span></p>
-<p>道家的无为而治偏重于清静无为，无为而无不为，也就是顺应天理民心，政府减少干预而使百姓自治。<span class="lyseealso"><span>【参】</span><span>《老子》第75章：<span class="lyq">民之难治，以其上之有为，是以难治。</span>（有为：指条文繁苛之类。）第57章：<span class="lyq">故圣人云：“我无为而民自<a href="#hua4">化</a>，我好静而民自正，我无事而民自富，我无欲而民自朴。”</span>《淮南子·原道训》：<span class="lyq">所谓无为者，不先物为也。所谓无不为者，<a href="#yin1">因</a>物之所为也。</span>据《帝王世纪·五帝》，<a href="#yao">尧帝</a>时<span class="lyq">天下大和，百姓无事，有八十老人击壤于道，观者叹曰：“大哉，帝之德也！”老人曰：“吾日出而作，日入而息，凿井而饮，耕田而食，帝何力于我哉？”</span>（击壤：古代射击类游戏，手持土块投掷摆在远处地上的土块目标。）</span></span></p>
+<p>道家的无为而治偏重于清静无为，无为而无不为，也就是顺应天理民心，政府减少干预而使百姓自治。<span class="lyseealso"><span>【参】</span><span>《老子》第75章：<span class="lyq">民之难治，以其上之有为，是以难治。</span>（有为：指条文繁苛之类。）第57章：<span class="lyq">故圣人云：“我无为而民自<a href="#hua4">化</a>，我好静而民自正，我无事而民自富，我无欲而民自朴。”</span>《淮南子·原道训》：<span class="lyq">所谓无为者，不先物为也。所谓无不为者，<a href="#yin1">因</a>物之所为也。</span>据《帝王世纪·五帝》，<a href="#yao">尧帝</a>时<span class="lyq">天下大和，百姓无事，有八十老人击壤于道，观者叹曰：“大哉，帝之德也！”老人曰：“吾日出而作，日入而息，凿井而饮，耕田而食，帝何力于我哉？”</span>（击壤：古代射击类游戏，手持土块投掷摆在远处地上的土块目标。《困学纪闻·杂识》引西晋周处《风土记》说，用的是鞋状木片。）</span></span></p>
 <p>思考：“无为而治”和 <a href="#12.14" class="lyref">12.14</a> <span class="lyq">居之无倦</span>是否矛盾？</p>
 </li></ul></div>
 </div>
