--- a/aboly.html
+++ b/aboly.html
@@ -5612,7 +5612,7 @@ img.characterimg {
 <li><p><span class="lyterm">探汤</span>：把手伸进沸水里，形容戒惧。<span class="lyterm">汤</span>：热水，沸水。<span class="lyexample"><span>【例】</span><span>成语“赴汤蹈火”。</span></span><span class="lyseealso"><span>【参】</span><span>《大戴礼记·曾子立事》：<span class="lyq">〔君子〕见善恐不得与焉，见不善恐其及己也。</span></span></span></p></li>
 <li>
 <p><span class="lyterm">其语</span>指破折号前面的话，<span class="lyterm">其人</span>指能够这样做到的人。</p>
-<p>前一句是说为人善恶分明，后一句是说身处<a href="#qiongda">穷达</a>两极都能坚定不移，这中间还有很长的路。</p>
+<p>前一句是说为人善恶分明，后一句是说身处<a href="#qiongda">穷达</a>两极都能坚定不移。这中间还有很长的路。</p>
 </li>
 </ul></div>
 </div>
@@ -5633,7 +5633,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">异<a href="#wen2c">闻</a></span>：指（从孔子那里学到的）与众不同的知识，私房货。</p></li>
-<li><p><a id="wuyiyan"></a><span class="lyterm">无以言</span>：指无法在正式场合对答如仪。<span class="lyseealso"><span>【参】</span><span>《汉书·艺文志》：<span class="lyq">古者诸侯卿大夫交接邻国，以<a href="#weiyandayi">微言</a>相感，当揖让之时，必称《诗》以<a href="#yu4c">谕</a>其志，盖以别贤不肖而观盛衰焉。故孔子曰“不学《诗》，无以言”也。</span>后来古典小说、评书演义中“有诗为证”的惯例，可能也是受此影响。思考：西方社交讲究的 <a href="https://en.wikipedia.org/wiki/Small_talk" class="lyurl" target="_blank">small talk</a> 与本章的“微言”有何异同？</span></span></p></li>
+<li><p><a id="wuyiyan"></a><span class="lyterm">无以言</span>：指无法在正式场合对答如仪。<span class="lyseealso"><span>【参】</span><span>《汉书·艺文志》：<span class="lyq">古者诸侯卿大夫交接邻国，以<a href="#weiyandayi">微言</a>相感，当揖让之时，必称《诗》以<a href="#yu4c">谕</a>其志，盖以别贤不肖而观盛衰焉。故孔子曰“不学《诗》，无以言”也。</span>后来古典小说、评书演义中“有诗为证”的惯例，可能也是受此影响。思考：西方社交讲究的 <a href="https://en.wikipedia.org/wiki/Small_talk" class="lyurl" target="_blank">small talk</a> 与“微言”有何异同？</span></span></p></li>
 <li>
 <p><span class="lyterm">远其子</span>：指不对自己的儿子有所偏私。<span class="lyseealso"><span>【参】</span><span><a href="#7.24" class="lyref">7.24</a> 。黄式三《论语后案》：<span class="lyq">后儒舍经文正训而求圣人不传之秘，正与子禽同意。</span></span></span></p>
 <p>后来“庭训”就指得自父亲的教导，又泛指家教。<span class="lyexample"><span>【例】</span><span>《旧唐书·刘赞传》载，唐德宗时期的宣州刺史刘赞<span class="lyq">不知书，但以强猛立威，官吏畏之。……<a href="#dizi">子弟</a>皆亏庭训，虽童年稚齿，便能侮<a href="#yi4g">易</a>骄人，人士鄙之。</span></span></span></p>
@@ -5908,7 +5908,7 @@ img.characterimg {
 <p><a href="#zigong">子贡</a>曰：“子如不言，则小子何述焉？”</p>
 <p>子曰：“天何言哉？四时行焉，百物生焉。天何言哉？”</p>
 </div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼之律”相似，“不言而教”也是孔子向往的吧。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼之律”相似，“不言而教”也是孔子向往的吧。<span class="lyseealso"><span>【参】</span><span>《史记·太史公自序》中，司马迁解释孔子作《春秋》的原因，就引用孔子的话说：<span class="lyq">我欲载之空言，不如见之于行事之深切著明也。</span></span></span></p></li></ul></div>
 </div>
 <a id="17.20"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#17.20">17.20</a></div>
