--- a/aboly.html
+++ b/aboly.html
@@ -751,7 +751,10 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#1.9">1.9</a></div>
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“慎终追远，民德归厚矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">慎终追远</span>。<span class="lyterm">慎</span>：动词，严肃谨慎地对待。<span class="lyterm">终</span>：人去世，引申为丧事。<span class="lyterm">追</span>：怀念，追思。<span class="lyterm">远</span>：指已故之人，先人。成语“慎终追远”指谨慎做事，不忘先贤。</p></li>
+<li>
+<p><span class="lyterm">慎终追远</span>。<span class="lyterm">慎</span>：动词，严肃谨慎地对待。<span class="lyterm">终</span>：人去世，引申为丧事。<span class="lyterm">追</span>：怀念，追思。<span class="lyterm">远</span>：指已故之人，先人。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">慎终者，<a href="#2.5">丧尽其礼</a>；追远者，<a href="#3.12">祭尽其诚</a>。</span></span></span></p>
+<p><a id="shenzhong"></a>“慎终”也可指谨慎做事，坚持到底或预估后果，近似于 <a href="#19.12" class="lyref">19.12</a> <span class="lyq">有始有卒</span>，“终”指结束，结果。</p>
+</li>
 <li>
 <p><a id="de2"></a><span class="lyterm">德</span>：道德品质，character，多指优良的道德品质，virtue。它的含义较宽泛，<a href="#ren2">仁</a>、<a href="#yi4">义</a>、<a href="#li3">礼</a>、<a href="#zhi4d">智</a>等都可看作德的一种。</p>
 <p>不同语言的常用词汇相互解释，难以强求起源、文化背景的近似。例如用于君上的<a href="#de2a">德</a>，常暗示受到天意认可般的超群品质，virtue就缺少相应的附加含义，charisma也只是略为接近。<span class="lyexample"><span>【例】</span><span><a href="#7.23" class="lyref">7.23</a> <span class="lyq">天生德于予，桓魋其如予何？</span></span></span></p>
@@ -1414,7 +1417,7 @@ img.characterimg {
 <li><p><span class="lyterm">媚</span>：取悦，迎合。这句引语的出处不详。后来的俗语“不怕官，只怕管”，就很直接了。</p></li>
 <li>
 <p><span class="lyterm">奥</span>：指奥神，这是其本义，确切来历已失传，只知道受祭于室内西南角，于是西南角也称为奥，是室内的尊位。这里喻指名位尊贵但不起实际作用的人，难以确考是谁，有认为指<a href="#6.28">子见南子</a>一事。</p>
-<p>后来，“奥”泛指室内深处，逐渐“深奥”并用。“奥援”就是内部或暗中的助力，内应；“<a href="#shengtangrushi">堂</a>奥”指高深的道理或境界。</p>
+<p>后来，“奥”泛指室内深处，逐渐“深奥”并用。“奥援”就是内部或暗中的助力，内应；“<a href="#shengtangrushi">堂</a>奥”指高深的道理或境界。另外，窔（<span class="lypinyin">yào</span>）是室内东南角，也可比喻高深的境界。</p>
 </li>
 <li><p><span class="lyterm">灶</span>：指灶神，即灶王爷，传说掌管厨灶饮食的神，他在诸神中品级不高，却直接关系到每个人的日常生活。这里喻指掌实权、能直接影响孔子前途的人，也就是王孙贾自己。</p></li>
 </ul></div>
@@ -2056,7 +2059,7 @@ img.characterimg {
 <li><p><span class="lyterm">斐（<span class="lypinyin">fěi</span>）然成章</span>：已经形成光彩绚丽的花纹图案了，这里是用布匹上的美丽花纹来比喻弟子已经取得了可观的成绩。<span class="lyterm">斐</span>：五彩交错。<a id="zhang1"></a><span class="lyterm">章</span>：彩色，花纹。<span class="lyexample"><span>【例】</span><span>《孟子·尽心上》：<span class="lyq">君子之志于道也，不成章不<a href="#da2">达</a>。</span>成语“斐然成章”指写出来的文章富有文采。</span></span></p></li>
 <li><p><span class="lyterm">裁</span>：剪裁，这是接着“斐然成章”的比喻，指引导，教正。孔子对学生们既感欣慰又怀隐忧的心情跃然纸上。</p></li>
 </ul>
-<p><a id="buwangqichu"></a><span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》所记孔子的话是：<span class="lyq">归与！归与！吾党之小子狂简，进取不忘其初。</span>这里的“狂简”写出了热血青年意气风发的样子。“进取之道”后来特指升官仕进的学问。“不忘其初”可能是现代常说的“不忘初心”的来源。</span></span></p>
+<p><a id="buwangqichu"></a><span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》所记孔子的话是：<span class="lyq">归与！归与！吾党之小子狂简，进取不忘其初。</span>这里的“狂简”写出了热血青年意气风发的样子。“进取之道”后来特指升官仕进的学问。“不忘其初”可能是现代常说的“不忘初心”的来源。南朝梁周兴嗣《千字文》：<span class="lyq"><a href="#du3a">笃</a>初诚美，<a href="#shenzhong">慎终</a>宜<a href="#ling4">令</a>。</span></span></span></p>
 </div>
 </div>
 <a id="5.23"></a><div class="lyblob">
@@ -4208,7 +4211,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="junchenfuzi"></a><span class="lyterm">君君，臣臣，父父，子子。</span><span class="lyterm">君君</span>：君尽君职。第一个<span class="lyterm">君</span>是名词，君上；第二个是动词，履行为君的义务。这和<a href="#xianxianyise">贤贤易色</a>里的“贤贤”用法不同。另外3个词的意思，也是依照自己的身份，去做应当做的事。孔子的回答现实意义很强，景公能听而<a href="#18.3">不能用</a>，致有身后的<a href="#chenchengzi">田氏之祸</a>。<span class="lyseealso"><span>【参】</span><span>《礼记·礼运》：<span class="lyq">父慈、子孝、兄良、弟<a href="#ti4">弟</a>、夫义、妇听、长惠、幼顺、君仁、臣忠，十者谓人之义。</span>《史记·太史公自序》在论及孔子因何而作《春秋》时说：<span class="lyq">夫不通礼义之旨，至于君不君，臣不臣，父不父，子不子。君不君则犯，臣不臣则诛，父不父则无道，子不子则不孝。此四行者，天下之大过也。……故《春秋》者，礼义之大宗也。</span></span></span></p>
-<p>君臣父子的人<a href="#lun2">伦</a>关系，是传统儒家的重要理念，既形成了和睦融洽的家族纽带，又稳固了各守其职的政治结构。<span class="lyseealso"><span>【参】</span><span>《周易·家人》：<span class="lyq">父父，子子，兄兄，弟弟，夫夫，妇妇，而家道正；正家而天下定矣。</span>《孟子·滕文公上》遥想<a href="#shun">舜帝</a>教化初民的情景：<span class="lyq">人之有道也，饱食、暖衣、逸居而无教，则近于禽兽。圣人有忧之，使<a href="#shangchao">契</a>为司徒，教以人伦：父子有亲，君臣有义，夫妇有别，长幼有叙，朋友有信。</span>（圣人：指舜。叙：次序。）《大学》：<span class="lyq">为人君，止于仁；为人臣，止于敬；为人子，止于孝；为人父，止于慈；与国人交，止于信。</span>（止：至。）</span></span></p>
+<p>君臣父子的人<a href="#lun2">伦</a>关系，是传统儒家的重要理念，既形成了和睦融洽的家族纽带，又稳固了各守其职的政治结构。<span class="lyseealso"><span>【参】</span><span>《周易·家人》：<span class="lyq">父父，子子，兄兄，弟弟，夫夫，妇妇，而家道正；正家而天下定矣。</span>《孟子·滕文公上》遥想<a href="#shun">舜帝</a>教化初民的情景：<span class="lyq">人之有道也，饱食、暖衣、逸居而无教，则近于禽兽。圣人有忧之，使<a href="#shangchao">契</a>为司徒，教以人伦：父子有亲，君臣有义，夫妇有别，长幼有叙，朋友有信。</span>（圣人：指舜。叙：次序。）《大学》认为：<span class="lyq">为人君，止于仁；为人臣，止于敬；为人子，止于孝；为人父，止于慈；与国人交，止于信。</span>（止：至。）《千字文》也说：<span class="lyq">资父事君，曰严与敬。孝当竭力，忠则尽命。</span>（资：供养。）</span></span></p>
 </li>
 <li><p><a id="xin4a"></a><span class="lyterm">信</span>：副词，确实，真的，果真。<span class="lyexample"><span>【例】</span><span>《吕氏春秋·开春论·爱类》：<span class="lyq">闻大王将攻宋，信有之乎？</span></span></span></p></li>
 </ul></div>
@@ -4432,7 +4435,7 @@ img.characterimg {
 <p><a id="gongzijing"></a><span class="lyterm">公子荆</span>：卫献公（前576年—前559年，前546年—前544年在位）之子，名荆，他和<a href="#gongshuwenzi">公叔文子</a>等人曾被<a href="#jizhaguanyue">季札</a>誉为卫之君子。因为当时<a href="#aigong">鲁哀公</a>也有子名荆，所以加“卫”以示区别。<a href="#19.22" class="lyref">19.22</a>  的“卫公孙朝”，也是同样的意思。</p>
 <p><a id="gongzi"></a><span class="lyterm"><a href="#juewei">公</a>子</span>：诸侯除了太子以外的儿子（如著名的战国四公子），也泛称诸侯的子女，后来又推广指贵族子弟。</p>
 </li>
-<li><p><span class="lyterm">善居室</span>：指善于居家过日子。后面的主语都是公子荆，是孔子叙述他的言行。这和 <a href="#16.12" class="lyref">16.12</a> <span class="lyq">齐景公有马千驷</span>形成对比。<span class="lyseealso"><span>【参】</span><span>清代戚学标《四书偶谈》：<span class="lyq">荆系公子，少长宫中，及壮而授室，与之采邑，而爵之为大夫，此为有家之始。</span>（授室：娶妻。）《孝经·广扬名》：<span class="lyq">君子之事亲孝，故忠可移于君；事兄<a href="#ti4">悌</a>，故顺可移于长；居家理，故治可移于官。</span>“善居室”符合儒家<a href="#xiushen">修齐治平</a>的理念，可以比较《世说新语·任诞·十》注引东晋戴逵《竹林七贤论》：<span class="lyq">诸阮前世皆儒学，善居室；唯咸一家尚道弃事，好酒而贫。</span>（咸：阮咸，魏末晋初的名士，竹林七贤之一。道：指老庄清静无为之道。）</span></span></p></li>
+<li><p><span class="lyterm">善居室</span>：指善于居家过日子。后面的主语都是公子荆，是孔子叙述他的言行。这和 <a href="#16.12" class="lyref">16.12</a> <span class="lyq">齐景公有马千驷</span>形成对比。<span class="lyseealso"><span>【参】</span><span>清代戚学标《四书偶谈》：<span class="lyq">荆系公子，少长宫中，及壮而授室，与之采邑，而爵之为大夫，此为有家之始。</span>（授室：娶妻。）<a id="guangyangming"></a>《孝经·广扬名》：<span class="lyq">君子之事亲孝，故忠可移于君；事兄<a href="#ti4">悌</a>，故顺可移于长；居家理，故治可移于官。</span>“善居室”符合儒家<a href="#xiushen">修齐治平</a>的理念，可以比较《世说新语·任诞·十》注引东晋戴逵《竹林七贤论》：<span class="lyq">诸阮前世皆儒学，善居室；唯咸一家尚道弃事，好酒而贫。</span>（咸：阮咸，魏末晋初的名士，竹林七贤之一。道：指老庄清静无为之道。）</span></span></p></li>
 <li><p><span class="lyterm">始有</span>：刚开始有点财产。</p></li>
 <li>
 <p><span class="lyterm">苟合矣</span>：差不多够用了，凑合了。<span class="lyterm">苟</span>：姑且，暂且。<span class="lyterm">合</span>：形容词，适合，适足。</p>
@@ -4524,7 +4527,7 @@ img.characterimg {
 <li><p><span class="lyterm">直躬</span>：人名，<span class="lyterm">直</span>表示其性格特点。在传说、寓言、神话、童话中，如果人物的真实姓名不可考或不重要，往往就用特点或者事迹代替姓名，比如愚公、铁拐李、白雪公主（Snow White），以及后文的<a href="#jieyu">接舆</a>、<a href="#changjujieni">长沮、桀溺</a>。</p></li>
 <li><p><span class="lyterm">攘</span>（<span class="lypinyin">rǎng</span>）：偷窃。<span class="lyexample"><span>【例】</span><span>清代周亮工《与张瑶星书》：<span class="lyq">生平不敢攘他人之著作以为己有也。</span></span></span></p></li>
 <li><p><span class="lyterm">证</span>：动词，举证告发，检举。</p></li>
-<li><p><span class="lyterm">隐</span>：隐瞒，掩蔽。这是由孔子推崇的<a href="#junchenfuzi">君臣父子</a>关系决定的，所谓血浓于水，家庭关系先于社会关系。后世倾向于宣扬先忠国然后孝亲，与此形成对比。</p></li>
+<li><p><span class="lyterm">隐</span>：隐瞒，掩蔽。这是由孔子推崇的<a href="#junchenfuzi">君臣父子</a>关系决定的，所谓血浓于水，家庭关系先于社会关系。后世倾向于宣扬先忠国然后孝亲，与此形成对比。也可参考 <a href="#13.8" class="lyref">13.8</a> <a href="#guangyangming">所引</a>《孝经》。</p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》：<span class="lyq">事亲有隐而无<a href="#fan4">犯</a>，……事君有犯而无隐，……事师无犯无隐。</span>《孟子·尽心上》对这个主题有进一步发挥。有人问孟子：假如<a href="#shun">舜帝</a>的父亲杀了人，舜会怎么做呢？孟子答：舜会听凭法官<a href="#gaoyao">皋陶</a>逮捕父亲，因为这是他应受的惩罚；但作为儿子，舜又会将父亲从监狱里救出来，一起远走高飞快乐生活。<span class="lyq">舜视弃天下，犹弃敝蹝也；窃负而逃，遵海滨而处，终身訢然，乐而忘天下。</span>（蹝（<span class="lypinyin">xǐ</span>）：草鞋。訢（<span class="lypinyin">xīn</span>）：通“欣”。）《庄子·盗跖》也认为：<span class="lyq">直躬证父，<a href="#weishengao">尾生</a>溺死，<a href="#xin4">信</a>之患也。</span><a id="weizunzhehui"></a>《公羊传·闵公元年》提出，孔子笔削《春秋》的一个原则是<span class="lyq">为尊者讳，为亲者讳，为贤者讳</span>，这对中国社会产生了深远影响，形成了牢固的人情纽带。</span></span></p>
 </div>
@@ -5908,7 +5911,7 @@ img.characterimg {
 <p><a href="#zigong">子贡</a>曰：“子如不言，则小子何述焉？”</p>
 <p>子曰：“天何言哉？四时行焉，百物生焉。天何言哉？”</p>
 </div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼之律”相似，“不言而教”也是孔子向往的吧。<span class="lyseealso"><span>【参】</span><span>《史记·太史公自序》中，司马迁解释孔子作《春秋》的原因，就引用孔子的话说：<span class="lyq">我欲载之空言，不如见之于行事之深切著明也。</span></span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼之律”相似，“不言而教”也是孔子向往的吧。<span class="lyseealso"><span>【参】</span><span>《史记·太史公自序》中，司马迁解释孔子作《<a href="#chunqiu">春秋</a>》的原因，就引用孔子的话说：<span class="lyq">我欲载之空言，不如见之于行事之深切著明也。</span></span></span></p></li></ul></div>
 </div>
 <a id="17.20"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#17.20">17.20</a></div>
@@ -6530,7 +6533,7 @@ img.characterimg {
 <p><a id="dinggong"></a><span class="lycharname">定公</span>：即鲁定公，名宋，鲁国第25任国君，<a href="#zhaogong">鲁昭公</a>的庶弟，<a href="#aigong">鲁哀公</a>之父。他于前509年—前495年在位，期间国政被<a href="#jipingzi">季平子</a>、<a href="#jihuanzi">季桓子</a>、<a href="#yanghuo">阳货</a>、<a href="#shusunwushu">叔孙武叔</a>把持。前501年—前498年间任用孔子，国势一度振兴。但受到齐国<a href="#18.4">糖衣炮弹</a>的诱惑，荒政废礼，孔子只好出走。 <a href="#3.19" class="lyref">3.19</a> <a href="#13.15" class="lyref">13.15</a> </p>
 <p><a id="gongshuwenzi"></a><span class="lycharname">公叔文子</span>：卫国大夫公叔发，也是<a href="#weilinggong">卫灵公</a>的堂兄弟。<a href="#qirenkuinvyue">前497年</a>孔子来到卫国，公叔文子就在同年或略早去世。《左传·定公十四年》载，他家境富裕，曾邀请灵公赴宴，却被<a href="#shiyu">史鱼</a>警告：<span class="lyq">子必祸矣！子富而君贪，罪其及子乎！</span>然后补充道：你自己谨守臣礼，可免于难；但你儿子公叔戍富而骄，<span class="lyq">其亡乎？富也不骄者鲜，吾<a href="#ozhiv">唯子之见</a>；骄而不亡者，未之有也，戍必与焉！</span>不出所料，前496年春，灵公就以将害<a href="#nanzi">南子</a>为由，把公叔戍逐去鲁国了。 <a href="#14.13" class="lyref">14.13</a> <a href="#14.18" class="lyref">14.18</a> </p>
 <p><a id="gongzijiu"></a><span class="lycharname">公子纠</span>（？—前685年）：<a href="#qihuangong">齐桓公</a>小白的二哥。他受<a href="#guanzhong">管仲</a>、召忽辅佐，得鲁国援助，与小白争立为齐君。失败后，鲁国迫于齐桓公武力，杀死了公子纠。 <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
-<p><a id="guanzhong"></a><span class="lycharname">管仲</span>（约前720年—前645年）：春秋时期法家代表人物，名夷吾，字仲，谥号是敬（“令善典法曰敬”）。他和<a id="baoshuya"></a><a href="#qihuangong">齐桓公</a>的师傅鲍叔牙自少年时即为至交好友，史称“管鲍之交”。他受鲍叔牙极力推荐，得到<a href="#qihuangong">齐桓公</a>信任，被尊称为“仲父”，主持齐政40余年。期间力行改革，宽政惠民，富国强兵，使齐国雄霸于诸侯。《史记·管晏列传》、《史记·齐太公世家》简要记录了其生平事迹，西汉刘向编辑的《管子》集中反映了其思想主张。 <a href="#3.22" class="lyref">3.22</a> <a href="#14.9" class="lyref">14.9</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
+<p><a id="guanzhong"></a><span class="lycharname">管仲</span>（约前720年—前645年）：春秋时期法家代表人物，名夷吾，字仲，谥号是敬（“令善典法曰敬”）。他和<a id="baoshuya"></a><a href="#qihuangong">齐桓公</a>的师傅鲍叔牙自少年时即为至交好友，史称“管鲍之交”。他受鲍叔牙极力推荐，得到<a href="#qihuangong">齐桓公</a>信任，被尊称为“仲父”，主持齐政40余年。期间力行改革，宽政惠民，富国强兵，使齐国雄霸于诸侯。《史记·管晏列传》、《史记·齐太公世家》简要记录了他的生平事迹，西汉刘向编辑的《管子》集中反映了他的思想主张。 <a href="#3.22" class="lyref">3.22</a> <a href="#14.9" class="lyref">14.9</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
 <p><a id="jikangzi"></a><span class="lycharname">季康子</span>，<span class="lycharname">康子</span>：季孙肥（？—前468年），<a href="#jishi">季孙氏</a>第6代宗主，<a href="#jihuanzi">季桓子</a>之子，曾任鲁国正卿，谥号是康（“安乐抚民曰康”）。前484年，由于<a href="#ranqiu">冉求</a>、<a href="#fanxu">樊须</a>在<a href="#jiquzhizhan">稷曲之战</a>立下大功，季康子派人从卫国将孔子恭迎回鲁国。从<a href="#qirenkuinvyue">父弃</a>到子迎，孔子已经漂泊异乡14年了，从此开始了最后5年相对安稳的教育和著述。 <a href="#2.20" class="lyref">2.20</a> <a href="#6.8" class="lyref">6.8</a> <a href="#10.16" class="lyref">10.16</a> <a href="#11.7" class="lyref">11.7</a> <a href="#12.17" class="lyref">12.17</a> <a href="#12.18" class="lyref">12.18</a> <a href="#12.19" class="lyref">12.19</a> <a href="#14.19" class="lyref">14.19</a> </p>
 <p><a id="jishi"></a><span class="lycharname">季氏</span>，<span class="lycharname">季孙</span>，<span class="lycharname">季</span>：即季孙氏，鲁国<a href="#sanhuan">三桓</a>家族之一，是鲁桓公嫡次子<a href="#jiyou">季友</a>的后代，实力为三桓之首，在鲁国权势熏天。<a href="#jihuanzi">季桓子</a>、<a href="#jikangzi">季康子</a>任<a href="#zongzhu">宗主</a>期间，孔子的不少弟子做过季氏家臣，如<a href="#ranqiu">冉求</a>、<a href="#zilu">子路</a>、<a href="#yong">冉雍</a>，此外也有不愿就列的<a href="#minziqian">闵子骞</a>。后来鲁穆公（前415年—前377年在位）继位，终于从三桓手中夺回政权。季孙氏据其封邑<a href="#feiyi">费邑</a>独立为费国，后世宗主仅费惠公在《孟子·万章下》有片言留存。从鲁僖公元年（前659年）季友任<a href="#qingdafushi">正卿</a>算起，季氏家族在鲁国风光了近两个半世纪。 <a href="#3.1" class="lyref">3.1</a> <a href="#3.6" class="lyref">3.6</a> <a href="#6.9" class="lyref">6.9</a> <a href="#11.17" class="lyref">11.17</a> <a href="#13.2" class="lyref">13.2</a> <a href="#14.36" class="lyref">14.36</a> <a href="#16.1" class="lyref">16.1</a> <a href="#18.3" class="lyref">18.3</a> </p>
 <p><a id="kongwenzi"></a><span class="lycharname">孔文子</span>，<span class="lycharname">仲叔圉</span>（<span class="lypinyin">yǔ</span>）：孔圉（？—前480年），谥号是文，<a href="#weilinggong">卫灵公</a>时期的卫国上卿。他的妻子是卫庄公<a href="#weijun">蒯聩</a>的姐姐，<a id="kongkui"></a>儿子孔悝（<span class="lypinyin">kuī</span>）也是卫国大夫。<a href="#zilu">子路</a>曾任孔悝的邑宰。 <a href="#5.15" class="lyref">5.15</a> <a href="#14.19" class="lyref">14.19</a> </p>
